# gpt-agent

./: .gitignore  Makefile  agent_cli.py  pyproject.toml
agent/: extractor.py  navigator.py  orchestrator.py
agent/extractor/: extractor.py  structures.py
agent/extractor/policy/: base.py  policies.py
agent/llm/: anthropic_proposer.py  base.py  openai_proposer.py  tools.py
agent/navigator/: navigator.py
agent/navigator/actions/: action.py  risk.py  structures.py
browser/: session.py
cli/: __init__.py  app.py  config.py  console_singleton.py  consts.py  enter_api_key.py  panel.py  user_io.py
cli/io/: __init__.py  console_singleton.py  user_io.py
cli/ui/: enter_api_key.py  get_task.py  panel.py
llm/: anthropic_proposer.py  base.py  openai_client.py  openai_proposer.py  prompt.py
models/: api_key.py
orm/: db.py  fields.py  model.py  query.py
