[project]
name = "gpt-agent"
version = "0.1.0"
description = "CLI agent for browser surfing tasks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "openai>=2.15.0",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "typer>=0.21.1",
]
